# my_snake_tek1

./: CMakeLists.txt  snake_sfml
assets/: font_nb2  spritesheet_snake.xcf
classes/: button.cpp  button.hpp  game.cpp  game.hpp  snake.cpp  snake.hpp  snake_change_dir.cpp  snake_in_game.cpp  textbox.cpp  textbox.hpp
include/: all_includes.h
src/: collisions.c++  gameloop.c++  main.c++  menu.c++  start_game.c++
